--- a/response.html
+++ b/response.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20230427210705">
+	<link rel="stylesheet" href="css/style.min.css?_v=20230501210342">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -2057,7 +2057,7 @@
 			<div class="popup__content">
 				<button data-close type="button" class="popup__close _icon-x"></button>
 				<div class="response__text">
-					<form data-dev data-goto-error data-popup-message="#response-confirmation" action="files/sendmail/sendmail.php" method="POST" class="informations__response response-informations">
+					<form data-goto-error data-popup-message="#response-confirmation" action="#" method="POST" class="informations__response response-informations">
 						<div class="response-informations__title title title--blue">Написати відгук</div>
 						<div class="response-informations__subtitle">Оцінка</div>
 						<div class="response-informations__rating rating rating_set">
@@ -2170,7 +2170,7 @@
 			</div>
 		</div>
 	</div>
-	<script src="js/app.min.js?_v=20230427210705"></script>
+	<script src="js/app.min.js?_v=20230501210342"></script>
 </body>
 
 </html>
