--- a/card.html
+++ b/card.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20230501210342">
+	<link rel="stylesheet" href="css/style.min.css?_v=20230501215539">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -258,7 +258,7 @@
 							</div>
 						</div>
 					</div>
-					<form data-goto-error data-popup-message="#response-confirmation" action="#" method="POST" class="informations__response response-informations">
+					<form data-goto-error data-popup-message="#response-confirmation" action="files/sendmail/sendmail.php" method="POST" class="informations__response response-informations">
 						<div class="response-informations__title">Написати відгук</div>
 						<div class="response-informations__subtitle">Оцінка</div>
 						<div class="response-informations__rating rating rating_set">
@@ -275,7 +275,7 @@
 							<div class="rating__value">4.5</div>
 						</div>
 						<div class="response-informations__form-line form-line">
-							<label class="form-line__label" for="response-card">Ім'я<span>*</span></label>
+							<label class="form-line__label" for="response-card-name">Ім'я<span>*</span></label>
 							<input class="form-line__input input" type="text" data-error="Введіть Ваше ім'я" name="form[response-card-name]" id="response-card-name" placeholder="Ім'я" data-required data-validate autocomplete="off">
 						</div>
 						<div class="response-informations__form-line form-line">
@@ -1180,42 +1180,12 @@
 									</div>
 								</div>
 							</li>
-							<!-- <li class="content-cart__card content-card">
-							<a href="#" class="content-card__image">
-								<picture><source data-srcset="img/product/product.webp" srcset="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" type="image/webp"><img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII="  data-src="img/product/product.png" alt="product photo"></picture>
-							</a>
-							<div class="content-card__info info-product">
-								<div class="info-product__item item-info">
-									<div class="item-info__main">
-										<div class="item-info__code">Код: <span>ISS20301B</span></div>
-										<a href="#" class="item-info__name">Ліхтар габаритний діодний жовтий 24 V (в-во
-											ISSIKSAN)</a>
-										<div class="item-info__price"><span>200</span> грн/шт.</div>
-									</div>
-									<button type="button" class="item-info__delete _icon-delete"></button>
-								</div>
-								<div class="info-product__total total-info">
-									<div class="total-info__quantity">
-										<div data-quantity class="quantity">
-											<button data-quantity-minus type="button"
-												class="quantity__button quantity__button_minus"></button>
-											<div class="quantity__input">
-												<input data-quantity-value autocomplete="off" type="text" name="form[]" value="1">
-											</div>
-											<button data-quantity-plus type="button"
-												class="quantity__button quantity__button_plus"></button>
-										</div>
-									</div>
-									<div class="total-info__sum"><span>199</span>грн</div>
-								</div>
-							</div>
-						</li> -->
 						</ul>
 					</div>
 					<div class="content-cart__footer footer-cart">
 						<div class="footer-cart__total">До оплати без доставки: </div>
 						<div class="footer-cart__value">1990 грн</div>
-						<a href="placing-order.html" type="button" class="footer-cart__btn button button--blue">Оформити
+						<a href="placing-order.html" class="footer-cart__btn button button--blue">Оформити
 							замовлення</a>
 					</div>
 				</div>
@@ -1230,7 +1200,6 @@
 				<div class="popup-footer__text">
 					<h5 class="popup-footer__title">Замовлення</h5>
 					<div class="popup-footer__text-block text-block">
-						<h6 class="text-block__title"></h6>
 						<p>Є декілька способів, щоб замовити товар. Всі варіанти включають простий алгоритм. Спершу, ви робите
 							замовлення і відправляєте його нам. Далі наші фахівці перевіряють його і посилають вам підтвердження.
 							Коли ми отримуємо вашу оплату, відправляємо товари.</p>
@@ -1866,7 +1835,6 @@
 				<div class="popup-footer__text">
 					<h5 class="popup-footer__title">Умови повернення та обміну</h5>
 					<div class="popup-footer__text-block text-block">
-						<h6 class="text-block__title"></h6>
 						<p>Компанія здійснює повернення та обмін цього товару відповідно до вимог законодавства. Проте,
 							компанія залишає за собою право відмови від безкоштовного гарантійного ремонту у разі
 							недотримання викладених нижче умов гарантії. Всі умови діють в рамках законодавства про захист прав
@@ -1921,7 +1889,7 @@
 			</div>
 		</div>
 	</div>
-	<script src="js/app.min.js?_v=20230501210342"></script>
+	<script src="js/app.min.js?_v=20230501215539"></script>
 </body>
 
 </html>
