--- a/catalog.html
+++ b/catalog.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20230501210342">
+	<link rel="stylesheet" href="css/style.min.css?_v=20230501215539">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -385,42 +385,12 @@
 									</div>
 								</div>
 							</li>
-							<!-- <li class="content-cart__card content-card">
-							<a href="#" class="content-card__image">
-								<picture><source data-srcset="img/product/product.webp" srcset="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" type="image/webp"><img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII="  data-src="img/product/product.png" alt="product photo"></picture>
-							</a>
-							<div class="content-card__info info-product">
-								<div class="info-product__item item-info">
-									<div class="item-info__main">
-										<div class="item-info__code">Код: <span>ISS20301B</span></div>
-										<a href="#" class="item-info__name">Ліхтар габаритний діодний жовтий 24 V (в-во
-											ISSIKSAN)</a>
-										<div class="item-info__price"><span>200</span> грн/шт.</div>
-									</div>
-									<button type="button" class="item-info__delete _icon-delete"></button>
-								</div>
-								<div class="info-product__total total-info">
-									<div class="total-info__quantity">
-										<div data-quantity class="quantity">
-											<button data-quantity-minus type="button"
-												class="quantity__button quantity__button_minus"></button>
-											<div class="quantity__input">
-												<input data-quantity-value autocomplete="off" type="text" name="form[]" value="1">
-											</div>
-											<button data-quantity-plus type="button"
-												class="quantity__button quantity__button_plus"></button>
-										</div>
-									</div>
-									<div class="total-info__sum"><span>199</span>грн</div>
-								</div>
-							</div>
-						</li> -->
 						</ul>
 					</div>
 					<div class="content-cart__footer footer-cart">
 						<div class="footer-cart__total">До оплати без доставки: </div>
 						<div class="footer-cart__value">1990 грн</div>
-						<a href="placing-order.html" type="button" class="footer-cart__btn button button--blue">Оформити
+						<a href="placing-order.html" class="footer-cart__btn button button--blue">Оформити
 							замовлення</a>
 					</div>
 				</div>
@@ -435,7 +405,6 @@
 				<div class="popup-footer__text">
 					<h5 class="popup-footer__title">Замовлення</h5>
 					<div class="popup-footer__text-block text-block">
-						<h6 class="text-block__title"></h6>
 						<p>Є декілька способів, щоб замовити товар. Всі варіанти включають простий алгоритм. Спершу, ви робите
 							замовлення і відправляєте його нам. Далі наші фахівці перевіряють його і посилають вам підтвердження.
 							Коли ми отримуємо вашу оплату, відправляємо товари.</p>
@@ -1064,7 +1033,7 @@
 			</div>
 		</div>
 	</div>
-	<script src="js/app.min.js?_v=20230501210342"></script>
+	<script src="js/app.min.js?_v=20230501215539"></script>
 </body>
 
 </html>
