--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20230501210342">
+	<link rel="stylesheet" href="css/style.min.css?_v=20230501215539">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -74,7 +74,7 @@
 					<div class="main__block">
 						<h1 class="main__title title title--big-white">Запчастини до вантажних автомобілів </h1>
 						<h2 class="main__subtitle">Перевірені запчастини з Європи</h2>
-						<a href="catalog.html" type="submit" class="main__bnt button button--white">Каталог</a>
+						<a href="catalog.html" class="main__bnt button button--white">Каталог</a>
 					</div>
 				</div>
 			</section>
@@ -326,7 +326,7 @@
 			</section>
 			<section data-watch data-watch-once data-watch-threshold="0.3" class="page__selection selection">
 				<div class="selection__container">
-					<div class="selection__title title title--big-white">Підберемо запчастини за Вас</div>
+					<h2 class="selection__title title title--big-white">Підберемо запчастини за Вас</h2>
 					<button data-popup="#popup-selection" class="selection__button button button--white-blue">Підібрати</button>
 					<div class="selection__info">Найточніший спосіб знайти потрібну запчастину - підбір по
 						VIN-коду
@@ -338,42 +338,42 @@
 				<div class="info-us__container">
 					<div class="info-us__item-card">
 						<div class="info-us__item"><span>13</span>років</div>
-						<div class="info-us__info">Досвіду на вітчизняному ринку запчастин.</div>
+						<h4 class="info-us__info">Досвіду на вітчизняному ринку запчастин.</h4>
 					</div>
 					<div class="info-us__card">
 						<div class="info-us__image info-us__image--padding">
 							<img data-src="img/info-us/01.svg" alt="icon">
 						</div>
-						<div class="info-us__info">Пропонуємо понад 100000 деталей та комплектуючих від більше як 50
+						<h4 class="info-us__info">Пропонуємо понад 100000 деталей та комплектуючих від більше як 50
 							виробників Європи.
-						</div>
+						</h4>
 					</div>
 					<div class="info-us__card">
 						<div class="info-us__image">
 							<img data-src="img/info-us/02.svg" alt="icon">
 						</div>
-						<div class="info-us__info">Доставляємо замовлення по Україні протягом 1-2 днів.
-						</div>
+						<h4 class="info-us__info">Доставляємо замовлення по Україні протягом 1-2 днів.
+						</h4>
 					</div>
 					<div class="info-us__card">
 						<div class="info-us__image info-us__image--padding">
 							<img data-src="img/info-us/03.svg" alt="icon">
 						</div>
-						<div class="info-us__info">Діють гнучкі умови оплати, працюємо з ПДВ.
-						</div>
+						<h4 class="info-us__info">Діють гнучкі умови оплати, працюємо з ПДВ.
+						</h4>
 					</div>
 					<div class="info-us__card">
 						<div class="info-us__image">
 							<img data-src="img/info-us/04.svg" alt="icon">
 						</div>
-						<div class="info-us__info">Надаємо гарантію на весь асортимент.
-						</div>
+						<h4 class="info-us__info">Надаємо гарантію на весь асортимент.
+						</h4>
 					</div>
 				</div>
 			</section>
 			<section class="page__partners partners">
 				<div class="partners__container">
-					<div class="partners__title title title--big">Наші партнери</div>
+					<h3 class="partners__title title title--big">Наші партнери</h3>
 					<!-- Оболонка слайдера -->
 					<div class="partners__slider swiper">
 						<!-- Частина слайдера, що рухається -->
@@ -511,7 +511,7 @@
 			</section>
 			<section data-watch data-watch-once data-watch-threshold="0.3" class=" page__response response">
 				<div class="response__container">
-					<div class="response__title title title--big">Останні відгуки</div>
+					<h3 class="response__title title title--big">Останні відгуки</h3>
 					<!-- Оболонка слайдера -->
 					<div class="response__slider swiper">
 						<!-- Частина слайдера, що рухається -->
@@ -561,14 +561,6 @@
 											<div class="checkbox__label"><span class="checkbox__text">Ввічливий
 													продавець</span></div>
 										</div>
-										<!-- <div class="cool-emoji__checkbox checkbox--emoji">
-											<div class="checkbox__label"><span class="checkbox__text">Товар був у
-													наявності</span></div>
-										</div>
-										<div class="cool-emoji__checkbox checkbox--emoji">
-											<div class="checkbox__label"><span class="checkbox__text">Актуальний
-													опис</span></div>
-										</div> -->
 										<div class="cool-emoji__checkbox checkbox--emoji">
 											<div class="checkbox__label"><span class="checkbox__text">Швидко
 													відправили
@@ -580,30 +572,10 @@
 										</div>
 									</div>
 									<div class="body-response__emoji-negative negative-emoji">
-										<!-- <div class="negative-emoji__checkbox checkbox--emoji">
-											<label class="checkbox__label"><span class="checkbox__text">Товару не має
-													в наявності</span></label>
-										</div>
-										<div class="negative-emoji__checkbox checkbox--emoji">
-											<label class="checkbox__label"><span class="checkbox__text">Зі мною не
-													зв’язалися</span></label>
-										</div> -->
 										<div class="negative-emoji__checkbox checkbox--emoji">
 											<label class="checkbox__label"><span class="checkbox__text">Ціна вище
 													зазначеної</span></label>
 										</div>
-										<!-- <div class="negative-emoji__checkbox checkbox--emoji">
-											<label class="checkbox__label"><span class="checkbox__text">Невідповідність
-													товару опису</span></label>
-										</div>
-										<div class="negative-emoji__checkbox checkbox--emoji">
-											<label class="checkbox__label"><span class="checkbox__text">Відправляли
-													довше обіцяного</span></label>
-										</div>
-										<div class="negative-emoji__checkbox checkbox--emoji">
-											<label class="checkbox__label"><span class="checkbox__text">Неввічливий
-													продавець</span></label>
-										</div> -->
 									</div>
 								</div>
 							</div>
@@ -667,32 +639,6 @@
 													ціна</span></div>
 										</div>
 									</div>
-									<!-- <div class="body-response__emoji-negative negative-emoji">
-											<div class="negative-emoji__checkbox checkbox--emoji">
-												<label class="checkbox__label"><span class="checkbox__text">Товару не має
-														в наявності</span></label>
-											</div>
-											<div class="negative-emoji__checkbox checkbox--emoji">
-												<label class="checkbox__label"><span class="checkbox__text">Зі мною не
-														зв’язалися</span></label>
-											</div>
-											<div class="negative-emoji__checkbox checkbox--emoji">
-												<label class="checkbox__label"><span class="checkbox__text">Ціна вище
-														зазначеної</span></label>
-											</div>
-											<div class="negative-emoji__checkbox checkbox--emoji">
-												<label class="checkbox__label"><span class="checkbox__text">Невідповідність
-														товару опису</span></label>
-											</div>
-											<div class="negative-emoji__checkbox checkbox--emoji">
-												<label class="checkbox__label"><span class="checkbox__text">Відправляли
-														довше обіцяного</span></label>
-											</div>
-											<div class="negative-emoji__checkbox checkbox--emoji">
-												<label class="checkbox__label"><span class="checkbox__text">Неввічливий
-														продавець</span></label>
-											</div>
-										</div> -->
 								</div>
 							</div>
 							<div class="response__slide swiper-slide">
@@ -740,46 +686,7 @@
 											<div class="checkbox__label"><span class="checkbox__text">Товар був у
 													наявності</span></div>
 										</div>
-										<!-- <div class="cool-emoji__checkbox checkbox--emoji">
-												<div class="checkbox__label"><span class="checkbox__text">Актуальний
-														опис</span></div>
-											</div>
-											<div class="cool-emoji__checkbox checkbox--emoji">
-												<div class="checkbox__label"><span class="checkbox__text">Швидко
-														відправили
-														товар</span></div>
-											</div>
-											<div class="cool-emoji__checkbox checkbox--emoji">
-												<div class="checkbox__label"><span class="checkbox__text">Актуальна
-														ціна</span></div>
-											</div> -->
 									</div>
-									<!-- <div class="body-response__emoji-negative negative-emoji">
-											<div class="negative-emoji__checkbox checkbox--emoji">
-												<label class="checkbox__label"><span class="checkbox__text">Товару не має
-														в наявності</span></label>
-											</div>
-											<div class="negative-emoji__checkbox checkbox--emoji">
-												<label class="checkbox__label"><span class="checkbox__text">Зі мною не
-														зв’язалися</span></label>
-											</div>
-											<div class="negative-emoji__checkbox checkbox--emoji">
-												<label class="checkbox__label"><span class="checkbox__text">Ціна вище
-														зазначеної</span></label>
-											</div>
-											<div class="negative-emoji__checkbox checkbox--emoji">
-												<label class="checkbox__label"><span class="checkbox__text">Невідповідність
-														товару опису</span></label>
-											</div>
-											<div class="negative-emoji__checkbox checkbox--emoji">
-												<label class="checkbox__label"><span class="checkbox__text">Відправляли
-														довше обіцяного</span></label>
-											</div>
-											<div class="negative-emoji__checkbox checkbox--emoji">
-												<label class="checkbox__label"><span class="checkbox__text">Неввічливий
-														продавець</span></label>
-											</div>
-										</div> -->
 								</div>
 							</div>
 							<div class="response__slide swiper-slide">
@@ -824,14 +731,6 @@
 											<div class="checkbox__label"><span class="checkbox__text">Ввічливий
 													продавець</span></div>
 										</div>
-										<!-- <div class="cool-emoji__checkbox checkbox--emoji">
-												<div class="checkbox__label"><span class="checkbox__text">Товар був у
-														наявності</span></div>
-											</div>
-											<div class="cool-emoji__checkbox checkbox--emoji">
-												<div class="checkbox__label"><span class="checkbox__text">Актуальний
-														опис</span></div>
-											</div> -->
 										<div class="cool-emoji__checkbox checkbox--emoji">
 											<div class="checkbox__label"><span class="checkbox__text">Швидко
 													відправили
@@ -843,30 +742,6 @@
 										</div>
 									</div>
 									<div class="body-response__emoji-negative negative-emoji">
-										<!-- <div class="negative-emoji__checkbox checkbox--emoji">
-												<label class="checkbox__label"><span class="checkbox__text">Товару не має
-														в наявності</span></label>
-											</div>
-											<div class="negative-emoji__checkbox checkbox--emoji">
-												<label class="checkbox__label"><span class="checkbox__text">Зі мною не
-														зв’язалися</span></label>
-											</div> -->
-										<!-- <div class="negative-emoji__checkbox checkbox--emoji">
-											<label class="checkbox__label"><span class="checkbox__text">Ціна вище
-													зазначеної</span></label>
-										</div> -->
-										<!-- <div class="negative-emoji__checkbox checkbox--emoji">
-												<label class="checkbox__label"><span class="checkbox__text">Невідповідність
-														товару опису</span></label>
-											</div>
-											<div class="negative-emoji__checkbox checkbox--emoji">
-												<label class="checkbox__label"><span class="checkbox__text">Відправляли
-														довше обіцяного</span></label>
-											</div>
-											<div class="negative-emoji__checkbox checkbox--emoji">
-												<label class="checkbox__label"><span class="checkbox__text">Неввічливий
-														продавець</span></label>
-											</div> -->
 									</div>
 								</div>
 							</div>
@@ -1108,42 +983,12 @@
 									</div>
 								</div>
 							</li>
-							<!-- <li class="content-cart__card content-card">
-							<a href="#" class="content-card__image">
-								<picture><source data-srcset="img/product/product.webp" srcset="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" type="image/webp"><img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII="  data-src="img/product/product.png" alt="product photo"></picture>
-							</a>
-							<div class="content-card__info info-product">
-								<div class="info-product__item item-info">
-									<div class="item-info__main">
-										<div class="item-info__code">Код: <span>ISS20301B</span></div>
-										<a href="#" class="item-info__name">Ліхтар габаритний діодний жовтий 24 V (в-во
-											ISSIKSAN)</a>
-										<div class="item-info__price"><span>200</span> грн/шт.</div>
-									</div>
-									<button type="button" class="item-info__delete _icon-delete"></button>
-								</div>
-								<div class="info-product__total total-info">
-									<div class="total-info__quantity">
-										<div data-quantity class="quantity">
-											<button data-quantity-minus type="button"
-												class="quantity__button quantity__button_minus"></button>
-											<div class="quantity__input">
-												<input data-quantity-value autocomplete="off" type="text" name="form[]" value="1">
-											</div>
-											<button data-quantity-plus type="button"
-												class="quantity__button quantity__button_plus"></button>
-										</div>
-									</div>
-									<div class="total-info__sum"><span>199</span>грн</div>
-								</div>
-							</div>
-						</li> -->
 						</ul>
 					</div>
 					<div class="content-cart__footer footer-cart">
 						<div class="footer-cart__total">До оплати без доставки: </div>
 						<div class="footer-cart__value">1990 грн</div>
-						<a href="placing-order.html" type="button" class="footer-cart__btn button button--blue">Оформити
+						<a href="placing-order.html" class="footer-cart__btn button button--blue">Оформити
 							замовлення</a>
 					</div>
 				</div>
@@ -1158,7 +1003,6 @@
 				<div class="popup-footer__text">
 					<h5 class="popup-footer__title">Замовлення</h5>
 					<div class="popup-footer__text-block text-block">
-						<h6 class="text-block__title"></h6>
 						<p>Є декілька способів, щоб замовити товар. Всі варіанти включають простий алгоритм. Спершу, ви робите
 							замовлення і відправляєте його нам. Далі наші фахівці перевіряють його і посилають вам підтвердження.
 							Коли ми отримуємо вашу оплату, відправляємо товари.</p>
@@ -1912,7 +1756,7 @@
 			</div>
 		</div>
 	</div>
-	<script src="js/app.min.js?_v=20230501210342"></script>
+	<script src="js/app.min.js?_v=20230501215539"></script>
 </body>
 
 </html>
