--- a/placing-order.html
+++ b/placing-order.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20230501210342">
+	<link rel="stylesheet" href="css/style.min.css?_v=20230501215539">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -28,19 +28,19 @@
 						<div class="delivery__contacts contacts-delivery">
 							<div class="contacts-delivery__title">Контактні дані</div>
 							<div class="contacts-delivery__line form-line">
-								<label class="form-line__label" for="order-tel">Номер телефону <span>*</span></label>
+								<label class="form-line__label" for="delivery-te">Номер телефону <span>*</span></label>
 								<input class="form-line__input input" data-validate data-required type="tel" data-error="Введіть номер телефону" name="form[delivery-tel]" id="delivery-tel" placeholder="+380 (__) ___-__-__" autocomplete="off">
 							</div>
 							<div class="contacts-delivery__line form-line">
-								<label class="form-line__label" for="order-name">Ім'я<span>*</span></label>
+								<label class="form-line__label" for="delivery-name">Ім'я<span>*</span></label>
 								<input class="form-line__input input" data-validate data-required type="text" data-error="Введіть Ваше ім'я" name="form[delivery-name]" id="delivery-name" placeholder="Ім'я" autocomplete="off">
 							</div>
 							<div class="contacts-delivery__line form-line">
-								<label class="form-line__label" for="order-second-name">Прізвище<span>*</span></label>
+								<label class="form-line__label" for="delivery-second-name">Прізвище<span>*</span></label>
 								<input class="form-line__input input" data-validate data-required type="text" data-error="Введіть Ваше прізвище" name="form[delivery-second-name]" id="delivery-second-name" placeholder="Прізвище" autocomplete="off">
 							</div>
 							<div class="contacts-delivery__line form-line">
-								<label class="form-line__label" for="selection-mail">E-mail адреса<span>*</span></label>
+								<label class="form-line__label" for="delivery-mail">E-mail адреса<span>*</span></label>
 								<input class="form-line__input input" data-required="email" data-validate type="email" data-error="Невірно введена E-mail адреса" name="form[delivery-mail]" id="delivery-mail" placeholder="E-mail" autocomplete="off">
 							</div>
 						</div>
@@ -403,36 +403,6 @@
 										</div>
 									</div>
 								</li>
-								<!-- <li class="content-cart__card content-card">
-									<a href="#" class="content-card__image">
-										<picture><source data-srcset="img/product/product.webp" srcset="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" type="image/webp"><img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII="  data-src="img/product/product.png" alt="product photo"></picture>
-									</a>
-									<div class="content-card__info info-product">
-										<div class="info-product__item item-info">
-											<div class="item-info__main">
-												<div class="item-info__code">Код: <span>ISS20301B</span></div>
-												<a href="#" class="item-info__name">Ліхтар габаритний діодний жовтий 24 V (в-во
-													ISSIKSAN)</a>
-												<div class="item-info__price"><span>200</span> грн/шт.</div>
-											</div>
-											<button type="button" class="item-info__delete _icon-delete"></button>
-										</div>
-										<div class="info-product__total total-info">
-											<div class="total-info__quantity">
-												<div data-quantity class="quantity">
-													<button data-quantity-minus type="button"
-														class="quantity__button quantity__button_minus"></button>
-													<div class="quantity__input">
-														<input data-quantity-value autocomplete="off" type="text" name="form[]" value="1">
-													</div>
-													<button data-quantity-plus type="button"
-														class="quantity__button quantity__button_plus"></button>
-												</div>
-											</div>
-											<div class="total-info__sum"><span>199</span>грн</div>
-										</div>
-									</div>
-								</li> -->
 							</ul>
 						</div>
 						<div class="content-cart__footer footer-cart">
@@ -458,14 +428,14 @@
 							<div class="placing-order-confirmation__title title title--blue">Дякуємо за замовлення!</div>
 							<p>Номер Вашого замовлення <span>01060323</span></p>
 							<p>Незабаром з Вами зв’яжеться менеджер для уточнення даних.</p>
-							<a href="home.html" type="button" class="placing-order-confirmation__button button button--blue">Повернутися</a>
+							<a href="home.html" class="placing-order-confirmation__button button button--blue">Повернутися</a>
 						</div>
 					</div>
 				</div>
 			</div>
 		</div>
 	</div>
-	<script src="js/app.min.js?_v=20230501210342"></script>
+	<script src="js/app.min.js?_v=20230501215539"></script>
 </body>
 
 </html>
