--- a/placing-order.html
+++ b/placing-order.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20230501215539">
+	<link rel="stylesheet" href="css/style.min.css?_v=20230501220658">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -28,7 +28,7 @@
 						<div class="delivery__contacts contacts-delivery">
 							<div class="contacts-delivery__title">Контактні дані</div>
 							<div class="contacts-delivery__line form-line">
-								<label class="form-line__label" for="delivery-te">Номер телефону <span>*</span></label>
+								<label class="form-line__label" for="delivery-tel">Номер телефону <span>*</span></label>
 								<input class="form-line__input input" data-validate data-required type="tel" data-error="Введіть номер телефону" name="form[delivery-tel]" id="delivery-tel" placeholder="+380 (__) ___-__-__" autocomplete="off">
 							</div>
 							<div class="contacts-delivery__line form-line">
@@ -435,7 +435,7 @@
 			</div>
 		</div>
 	</div>
-	<script src="js/app.min.js?_v=20230501215539"></script>
+	<script src="js/app.min.js?_v=20230501220658"></script>
 </body>
 
 </html>
