--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20230501220658">
+	<link rel="stylesheet" href="css/style.min.css?_v=20230504204041">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -20,7 +20,7 @@
 					<a href="home.html" class="top-header__logo"><img src="img/Logo.svg" alt="logo"></a>
 					<div data-da=".menu__body,550,0" class="top-header__search search-header">
 						<div class="search-header__field">
-							<input class="search-header__input input" type="search" name="search" id="search" placeholder="Я шукаю..." autocomplete="off">
+							<input class="search-header__input search-field input" type="search" name="search" id="search" placeholder="Я шукаю..." autocomplete="off">
 							<button type="submit" class="search-header__btn _icon-search"></button>
 						</div>
 						<div id="search-results" class="search-header__result result-search">
@@ -1754,7 +1754,7 @@
 			</div>
 		</div>
 	</div>
-	<script src="js/app.min.js?_v=20230501220658"></script>
+	<script src="js/app.min.js?_v=20230504204041"></script>
 </body>
 
 </html>
